# PFPOffset

./: .gitmodules  ApproximateField.h  CGALPolygon.cpp  CGALPolygon.h  CGAL_CDT.h  CMakeLists.txt  CoverageField.h  DSU.cpp  DSU.h  GridVertex.h  LocalMesh.h  MeshBool.h  MeshBuilder.cpp  MeshBuilder.h  cdt.h  data_analyze.h  disassemble_circle.h  do_quadratic_error_metric.h  do_winding_number.h  dp.h  flag_parser.h  geometric_data.h  global_face.h  grid.h  io.h  lib_impl.h  main.bk.cpp  main.cpp  merge_initial.h  model_update.h  obj_input.h  one_ring_select.h  osqp.h  readme.md  remeshing.cpp  remeshing.h  rough_vertex.h  sort_by_polar_order.h  test.sh  画图.cpp
.github/workflows/: cmake-multi-platform.yml  cmake.yml
MeshKernel/: Mesh.cpp  Mesh.h
